Update docs and deps, remove stale planning files and tracked semanticdb
Docs:
- CONTRIBUTING: JDK 21+ → 25+, trampolining → tail-recursive state machine
- README: add RefMap/KeyedSemaphore/timer primitives, 576+ → 1000+ tests

Deps:
- munit 1.1.1 → 1.2.3, munit-scalacheck 1.1.0 → 1.2.0
- zio 2.1.22 → 2.1.24
- sbt-jmh 0.4.7 → 0.4.8, sbt-site 1.6.0 → 1.7.0

Cleanup:
- Delete ERU_PRIMITIVES_ENHANCEMENT.md, PHASE2_RENAMING_PLAN.md (stale)
- Remove 46 .semanticdb files from tracking (already in .gitignore)